--- a/build.gradle
+++ b/build.gradle
@@ -1,75 +1,13 @@
-plugins {
-    // id 'com.gradle.build-scan' version '3.0'
-    id 'groovy'
-    id 'jacoco'
-    id 'project-report'
-    id 'ru.vyarus.java-lib' version '2.1.0'
-    id 'ru.vyarus.github-info' version '1.2.0'
+plugins{
     id 'com.jfrog.bintray' version '1.8.4'
-    id 'net.researchgate.release' version '2.8.1'
-    id 'com.github.ben-manes.versions' version '0.27.0'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-}
-
-sourceCompatibility = 1.8
-
-wrapper {
-    gradleVersion = '5.6.4'
-}
-
-ext {
-    groovy = '2.5.7'
-    slf4j = '1.7.28'
-}
-
-repositories { jcenter(); mavenCentral(); mavenLocal() }
-dependencyManagement {
-    // Use for BOM declaration
-//    imports {
-//        mavenBom "group:artifact:version"
-//    }
-    dependencies {
-        dependency 'org.spockframework:spock-core:1.3-groovy-2.5'
-        // groovy bundled with spock (2.5.2) does not work well with java 11
-        dependency "org.codehaus.groovy:groovy:$groovy"
-        dependency "org.codehaus.groovy:groovy-json:$groovy"
-        dependency "org.codehaus.groovy:groovy-macro:$groovy"
-        dependency "org.codehaus.groovy:groovy-nio:$groovy"
-        dependency "org.codehaus.groovy:groovy-sql:$groovy"
-        dependency "org.codehaus.groovy:groovy-templates:$groovy"
-        dependency "org.codehaus.groovy:groovy-test:$groovy"
-        dependency "org.codehaus.groovy:groovy-xml:$groovy"
-
-        dependency "org.slf4j:slf4j-api:$slf4j"
-    }
-}
-dependencies {
-    compileOnly 'com.github.spotbugs:spotbugs-annotations:3.1.2'
-
-    implementation 'org.slf4j:slf4j-api'
-
-    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
-    testImplementation "org.slf4j:jul-to-slf4j:$slf4j"
-    testImplementation 'org.spockframework:spock-core'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 group = 'de.iotoi'
 description = 'java jcenter gradle'
-
-github {
-    user = 'cnruby'
-    license = 'MIT'
-}
-
-pom {
-    developers {
-        developer {
-            id 'cnruby'
-            name 'Gudao Luo'
-            email 'gudao.luo@gmail.com'
-        }
-    }
-}
+version = project.findProperty("version")
+sourceCompatibility = 11
 
 // java 11 auto module name
 jar {
@@ -78,60 +16,74 @@ jar {
     }
 }
 
-bintray {
-    user = findProperty('bintrayUser')
-    key = findProperty('bintrayKey')
-    publications = ['maven']
-    dryRun = false
-    publish = true
-    pkg {
+repositories{
+    mavenCentral()
+    jcenter()
+}
+
+dependencies{}
+
+
+// create the files *-sources.jar
+task sourcesJar(type: Jar, dependsOn: classes){
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+// create the files *-javadoc.jar
+task javadocJar(type: Jar, dependsOn: javadoc){
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts{
+    archives sourcesJar
+    archives javadocJar
+}
+
+bintray{
+    user = System.getenv("bintrayUser")
+    key = System.getenv("bintrayApiKey")
+    publications = ['DemoJcenter']
+    publish = true // !!!
+    pkg{
         repo = 'gradle_java_jcenter'
         name = project.name
         desc = project.description
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/cnruby/demo-jcenter'
         labels = ['java demo jcenter library']
-        publicDownloadNumbers = true
+        // publicDownloadNumbers = true
         version {
+            name = project.version
+            released = new Date()
+
+            // create the files *.asc in the jcenter
             gpg {
                 sign = true
-                passphrase = findProperty('gpgPassphrase')
+                passphrase = System.getenv('gpgPassphrase')
             }
-            mavenCentralSync {
-                sync = false
-                user = findProperty('sonatypeUser')
-                password = findProperty('sonatypePassword')
-            }
+
+            // mavenCentralSync {
+            //     sync = false
+            //     user = findProperty('sonatypeUser')
+            //     password = findProperty('sonatypePassword')
+            // }
         }
     }
 }
 
-afterReleaseBuild {
-    dependsOn = [bintrayUpload]
-    doLast {
-        logger.warn "RELEASED $project.group:$project.name:$project.version"
+publishing{
+    publications{
+        DemoJcenter(MavenPublication){
+            from components.java
+            groupId group
+            artifactId archivesBaseName
+            version version
+            artifact javadocJar
+            artifact sourcesJar
+        }
     }
 }
 
-test {
-    testLogging {
-        events 'skipped', 'failed'
-        exceptionFormat 'full'
-    }
-    maxHeapSize = '512m'
-}
-
-dependencyUpdates.revision = 'release'
-jacocoTestReport.reports.xml.enabled = true
 
 
-task showDependenciesTree(dependsOn: 'htmlDependencyReport', group: 'help', description:
-        'Generates dependencies tree report and opens it in browser') {
-    doLast {
-        java.awt.Desktop.getDesktop().open(file('build/reports/project/dependencies/root.html'))
-    }
-}
-
-// buildScan {
-//     termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-//     termsOfServiceAgree = 'yes'
-//     publishOnFailure()
-// }
+println version
