--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins{
     id 'com.jfrog.bintray' version '1.8.4'
     id 'java-library'
     id 'maven-publish'
+    id 'maven'
 }
 
 group = 'de.iotoi'
@@ -10,11 +11,11 @@ version = project.findProperty("version")
 sourceCompatibility = 11
 
 // java 11 auto module name
-jar {
-    manifest {
-        attributes 'Automatic-Module-Name': "$project.group.$project.name"
-    }
-}
+// jar {
+//     manifest {
+//         attributes 'Automatic-Module-Name': "$project.group.$project.name"
+//     }
+// }
 
 repositories{
     mavenCentral()
@@ -57,10 +58,10 @@ bintray{
             released = new Date()
 
             // create the files *.asc in the jcenter
-            // gpg {
-            //     sign = true
-            //     passphrase = System.getenv('gpgPassphrase')
-            // }
+            gpg {
+                sign = true
+                passphrase = System.getenv('gpgPassphrase')
+            }
 
             // mavenCentralSync {
             //     sync = false
@@ -78,8 +79,8 @@ publishing{
             groupId group
             artifactId archivesBaseName
             version version
-            // artifact javadocJar
-            // artifact sourcesJar
+            artifact javadocJar
+            artifact sourcesJar
         }
     }
 }
